kubernetes-deploy/03-ood/ood-services-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ood-portal
  namespace: ood
spec:
  type: ClusterIP
  selector:
    app: ood-portal
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ood-ingress
  namespace: ood
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  rules:
  - host: ood.bigea.unibo.it # Replace with actual hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ood-portal
            port:
              number: 80
